fix: loader on changement autoinscription/visibilite session

--- a/styles/components/Switch.module.css
+++ b/styles/components/Switch.module.css
@@ -10,7 +10,7 @@
   width: 3rem;
   height: 2rem;
   background-color: theme('colors.grey_700');
-  border-radius: theme('borderRadius.full');
+  border-radius: 9999px;
   border: 1px solid theme('colors.grey_700');
   cursor: pointer;
 }
@@ -20,8 +20,8 @@
   position: absolute;
   width: 1.75rem;
   height: 1.75rem;
-  border-radius: theme('borderRadius.full');
-  background-color: white;
+  border-radius: 9999px;
+  background-color: theme('colors.white');
   top: 1px;
   left: 1px;
   -webkit-transition: 0.4s;
@@ -29,8 +29,8 @@
 }
 
 .checkbox:checked + .toggle {
-  background-color: #397d54;
-  border: 1px solid #397d54;
+  background-color: theme('colors.success');
+  border: 1px solid theme('colors.success');
 }
 
 .checkbox:checked + .toggle::after {
